@@ -1,3 +1,9 @@
+2006-10-24  Akim Demaille  <demaille@gostai.com>
+
+	Installable libport
+	* libport.mk: New.
+	* README: Adjust.
+
 2006-10-21  Akim Demaille  <akim.demaille@free.fr>
 
 	Diagnose missing pthread.h.
